bugfix: extension card alignment issues on certain viewport widths

--- a/src/assets/sass/components/_TheExtensions.scss
+++ b/src/assets/sass/components/_TheExtensions.scss
@@ -26,6 +26,14 @@
       margin-top: $card-top-margin * 2;
     }
   }
+
+  // special case
+  @media screen and (min-width: 960px) and (max-width: 1195px) {
+    > :nth-child(2),
+    > :nth-child(3) {
+      margin-top: 0;
+    }
+  }
 }
 
 .ext-card {
@@ -53,6 +61,5 @@
     @include flexbox(null, center, center);
     height: 90px;
     width: 100%;
-    // background-color: lightblue;
   }
 }
